disable gpg temporarily

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -37,7 +37,7 @@
 [help]
   autocorrect = 1
 [commit]
-  gpgsign = true
+  gpgsign = false
 [filter "lfs"]
   clean = git-lfs clean -- %f
   smudge = git-lfs smudge -- %f
