move things to sh script

--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -1,3 +1,8 @@
+{{- if eq .chezmoi.os "darwin" -}}
+#!/bin/bash
+
+brew bundle --no-lock --file=/dev/stdin <<EOF
+
 # params
 cask_args appdir: "/Applications"
 
@@ -150,3 +155,6 @@ mas "Keynote", id: 409183694
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Xcode", id: 497799835
+
+EOF
+{{ end -}}
