--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -2,7 +2,7 @@
 {{- $keyid := promptString "GPG KeyID" -}}
 {{- $enable_secrets := promptString "Enable templates that require secrets manager? y/n" -}}
 [data]
-    name = "Sean Escriva"
+    name = "Chris Lavery"
     email = "{{ $email }}"
     keyid = "{{ $keyid }}"
 [data.features]
@@ -10,7 +10,7 @@
 # Enable magit forges
 [[data.forges]]
     type = "github"
-    user = "webframp"
+    user = "fire-ant"
     url = ""
 #[[data.forges]]
 #    type = "gitlab"
