--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -156,7 +156,7 @@ cask "slack" # mas "Slack", id: 803453959
 cask "zoom"
 
 #  Home Office
-mas "Logic", id: 634148309
+# mas "Logic", id: 634148309 always fails to update
 mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
