--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -164,5 +164,9 @@ mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Xcode", id: 497799835
 
+# Personal
+cask "Whatsapp"
+cask "signal"
+
 EOF
 {{ end -}}
