--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -156,7 +156,7 @@ cask "slack" # mas "Slack", id: 803453959
 cask "zoom"
 
 # Personal
-cask "Whatsapp"
+cask "whatsapp"
 cask "signal"
 
 #  Home Office
