--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -18,7 +18,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "buo/cask-upgrade"
 tap "homebrew/cask-fonts"
-brew "rcmdnk/file/brew-file" # might use this for updating the file in future
+tap "rcmdnk/file/brew-file" # might use this for updating the file in future
 brew "mas"
 
 # machine
