--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -149,6 +149,7 @@ brew "adr-tools"
 cask "google-drive"
 cask "1password"
 brew "openvpn"
+brew "openvpn-connect"
 cask "microsoft-auto-update"
 cask "webex"
 cask "microsoft-teams"
