--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -102,13 +102,13 @@ brew "golangci-lint"
 #  ruby
 brew "ruby-install"
 
-# Developer 
+# Developer
 cask "keybase"
 cask "visual-studio-code"
 cask "font-fira-code"
 cask "balenaetcher"
 
-# Infra / Cloud / Cloud-native 
+# Infra / Cloud / Cloud-native
 cask "vmware-fusion"
 cask "multipass"
 tap "weaveworks/tap"
@@ -131,15 +131,15 @@ brew "kind"
 brew "kubernetes-cli"
 brew "kubectx"
 tap "salesforce/policy_sentry", "https://github.com/salesforce/policy_sentry"
-brew "policy_sentry" 
+brew "policy_sentry"
 brew "aws-iam-authenticator"
 brew "sops"
 brew "age"
 brew "opa"
 brew "conftest"
 tap "slp/krun"
-brew "buildah" 
-brew "libkrunfw" 
+brew "buildah"
+brew "libkrunfw"
 brew "libkrun"
 brew "krunvm"
 
@@ -149,7 +149,7 @@ brew "adr-tools"
 cask "google-drive"
 cask "1password"
 brew "openvpn"
-brew "openvpn-connect"
+cask "openvpn-connect"
 cask "microsoft-auto-update"
 cask "webex"
 cask "microsoft-teams"
