--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -156,6 +156,7 @@ cask "openvpn-connect"
 cask "microsoft-auto-update"
 cask "webex"
 cask "microsoft-teams"
+cask "microsoft-remote-desktop"
 cask "slack" # mas "Slack", id: 803453959
 cask "zoom"
 
