--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -18,6 +18,7 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "buo/cask-upgrade"
 tap "homebrew/cask-fonts"
+tap "tilt-dev/tap/ctlptl"
 brew "mas"
 
 # machine
