--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -18,7 +18,6 @@ tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "buo/cask-upgrade"
 tap "homebrew/cask-fonts"
-tap "tilt-dev/tap/ctlptl"
 brew "mas"
 
 # machine
@@ -140,6 +139,7 @@ brew "sops"
 brew "age"
 brew "opa"
 brew "conftest"
+brew "tilt-dev/tap/ctlptl"
 
 # Work related
 brew "adr-tools"
