--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -139,7 +139,8 @@ brew "sops"
 brew "age"
 brew "opa"
 brew "conftest"
-brew "tilt-dev/tap/ctlptl"
+tap "tilt-dev/tap"
+brew "ctlptl"
 
 # Work related
 brew "adr-tools"
