--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -139,8 +139,9 @@ brew "sops"
 brew "age"
 brew "opa"
 brew "conftest"
-tap "tilt-dev/tap"
+tap "tilt-dev/tap", "https://github.com/tilt-dev/homebrew-tap"
 brew "ctlptl"
+brew "tilt"
 brew "vcluster"
 brew "cilium-cli"
 
