--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -37,7 +37,6 @@ brew "gh"
 brew "zsh-autosuggestions"
 brew "zsh-completions"
 brew "zsh"
-brew "neovim"
 
 # productivity 
 brew "starship"
@@ -46,6 +45,7 @@ cask "rectangle"
 # cask "fig" - unsure
 brew "tmux"
 brew "neovim"
+brew "tailscale"
 
 # linux tools
 brew "aspell"
