--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -45,7 +45,6 @@ cask "rectangle"
 # cask "fig" - unsure
 brew "tmux"
 brew "neovim"
-brew "tailscale"
 
 # linux tools
 brew "aspell"
@@ -170,6 +169,6 @@ mas "Keynote", id: 409183694
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
 mas "Xcode", id: 497799835
-
+mas "Tailscale", id: 1475387142
 EOF
 {{ end -}}
