--- a/run_once_before_install-packages-darwin.sh.tmpl
+++ b/run_once_before_install-packages-darwin.sh.tmpl
@@ -160,6 +160,8 @@ cask "zoom"
 # Personal
 cask "whatsapp"
 cask "signal"
+brew "jack"
+brew "qjackctl"
 
 #  Home Office
 # mas "Logic", id: 634148309 always fails to update
