--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -10,7 +10,7 @@
 [data.features]
     secretsmgr = "{{ $enable_secrets }}"
 # Enable magit forges
-[[data.forges]]
+[data.forges]
     type = "github"
     user = "fire-ant"
     url = ""
