--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,8 +1,9 @@
 {{- $email := promptString "email" -}}
+{{- $name := promptString "name" -}}
 {{- $keyid := promptString "GPG KeyID" -}}
 {{- $enable_secrets := promptString "Enable templates that require secrets manager? y/n" -}}
 [data]
-    name = "Chris Lavery"
+    name = "{{ name }}"
     email = "{{ $email }}"
     keyid = "{{ $keyid }}"
 [data.features]
