--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -9,7 +9,7 @@
 [data.features]
     secretsmgr = "{{ $enable_secrets }}"
 # Enable magit forges
-[data.forges]
-    type = "github"
-    user = "fire-ant"
-    url = "https://github.com/fire-ant"
+#[data.forges]
+#    type = "github"
+#    user = "fire-ant"
+#    url = "https://github.com/fire-ant"
